Revision history for TimeTracker

0.04-TOBE
    - now using App::Cmd


0.03    2006-01-07
    - override start/stop time from commandline


0.02    2008-01-04
    - ask before adding a new project (to catch typos etc)
    - added beautify_seconds and some nicer output to stop/start


0.01    2008-01-03
    - basic functionality working (start/stop)


0.00    2008-01-02
    - first draft
